5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4485/executions/1662_2973.log
== TEST (2019-04-15 15:22:25) 
-- CODE:
s=int(input("metros:"))
v= int(input("metros por segundo:"))
t= int(input("tempo:"))
s1= (s+(v*t))
if(s1<=100):
   m=print(round("s1",2))
else:
	print(round("ACIMA",2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round("ACIMA",2))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:23:57) 
-- CODE:
s=int(input("metros:"))
v= int(input("metros por segundo:"))
t= int(input("tempo:"))
s1= (s+(v*t))
if(s1<=100):
   m=print("s1")
else:
	print("ACIMA")
-- OUTPUT:
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:24:30) 
-- CODE:
s=int(input("metros:"))
v= int(input("metros por segundo:"))
t= int(input("tempo:"))
s1= (s+(v*t))
if(s1<=100):
   m=print("s1")
else:
	print("ACIMA")
-- OUTPUT:
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:25:52) 
-- CODE:
s=int(input("metros:"))
v= int(input("metros por segundo:"))
t= int(input("tempo:"))
s1= (s+(v*t))
if(s1<=100):
   print(s1)
else:
	print("ACIMA")
-- OUTPUT:
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:26:04) 
-- CODE:
s=int(input("metros:"))
v= int(input("metros por segundo:"))
t= int(input("tempo:"))
s1= (s+(v*t))
if(s1<=100):
   print(s1)
else:
	print("ACIMA")
-- OUTPUT:
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:27:20) 
-- CODE:
s=int(input("metros:"))
v= int(input("metros por segundo:"))
t= int(input("tempo:"))
s1= (s+(v*t))
if(s1<=100):
   print(s1)
	print("OK")
else:
	print("ACIMA")
-- ERROR:
File "XXXX", line 7
    print("OK")
              ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:28:30) 
-- CODE:
s=int(input("metros:"))
v= int(input("metros por segundo:"))
t= int(input("tempo:"))
s1= (s+(v*t))
print(s1)
if(s1<=100):
   print("OK")
else:
	print("ACIMA")
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:28:41) 
-- CODE:
s=int(input("metros:"))
v= int(input("metros por segundo:"))
t= int(input("tempo:"))
s1= (s+(v*t))
print(s1)
if(s1<=100):
   print("OK")
else:
	print("ACIMA")
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:28:52) 
-- CODE:
s=int(input("metros:"))
v= int(input("metros por segundo:"))
t= int(input("tempo:"))
s1= (s+(v*t))
print(s1)
if(s1<=100):
   print("OK")
else:
	print("ACIMA")
-- EXECUTION TIME:
0.205867
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:29:45) 
-- CODE:
s=int(input("metros:"))
v= int(input("metros por segundo:"))
t= int(input("tempo:"))
s1= int(s+(v*t))
print(s1)
if(s1<=100):
   print("OK")
else:
	print("ACIMA")
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:29:52) 
-- CODE:
s=int(input("metros:"))
v= int(input("metros por segundo:"))
t= int(input("tempo:"))
s1= int(s+(v*t))
print(s1)
if(s1<=100):
   print("OK")
else:
	print("ACIMA")
-- EXECUTION TIME:
0.205554
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:30:50) 
-- CODE:
s=int(input("metros:"))
v= int(input("metros por segundo:"))
t= int(input("tempo:"))
s1= int(s+(v*t))
print(s1)
if(v<=100):
   print("OK")
else:
	print("ACIMA")
-- OUTPUT:
7202
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:31:06) 
-- CODE:
s=int(input("metros:"))
v= int(input("metros por segundo:"))
t= int(input("tempo:"))
s1= int(s+(v*t))
print(s1)
if(v<=100):
   print("OK")
else:
	print("ACIMA")
-- OUTPUT:
7202
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:31:08) 
-- CODE:
s=int(input("metros:"))
v= int(input("metros por segundo:"))
t= int(input("tempo:"))
s1= int(s+(v*t))
print(s1)
if(v<=100):
   print("OK")
else:
	print("ACIMA")
-- EXECUTION TIME:
0.222114
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
OK
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
OK
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
